--- a/public/index.html
+++ b/public/index.html
@@ -447,7 +447,7 @@
                 <br>
                 TIZIMLI YONDASHUV
             </h1>
-            <div class="grid grid-cols-3 p-16 mt-9">
+            <div class="grid grid-cols-3 gap-8 p-16 mt-9">
                 <div class="bg-white text-center pt-9 px-5">
                     <h3 class="text-2xl font-bold py-4">O’zingizga mos kursni <br> tanlash</h3>
                     <p class="leading-relaxed text-base">Biz nafaqat yurtimizdagi balki butun dunyoda eng
