--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
             </nav>
         </header>
     </div>
-    <div class="max-w-6xl mx-auto mt-48">
+    <div class="max-w-6xl mx-auto py-8 mt-48">
         <div class="grid grid-cols-2 items-center gap-24">
             <div>
                 <div class="border border-gray-100 pt-10 pb-8 px-16">
