--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./image/Pdp-Logo.svg">
+    <title>PDP Academy</title>
 </head>
 
 <body>
